[tool.poetry]
name = "proxy-server"
version = "0.1.0"
description = ""
authors = ["azzip <azzip-rnd@skvip.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
twisted = "^23.10.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
